CSS and JS init files

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 50px;
-      }
-      h1 {
-        color: #333;
-      }
-    </style>
+    <title>Consultancy Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Welcome to the Test Page</h1>
-    <p>This is a simple HTML page for testing purposes.</p>
+    <header>
+      <h1>Consultancy Name</h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
+    <section class="hero">
+      <h1>Welcome to Our Consultancy</h1>
+      <p>
+        We help businesses grow with expert guidance and tailored solutions.
+      </p>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
