--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
           >.</span
         >
       </h1>
-
-      <p class="colorPrimary">icon</p>
+      <div class="logo">
+        <img src="images/logo-green.svg" alt="Description of image" />
+      </div>
     </section>
 
     <!-- SERVICE #1 SECTION -->
@@ -66,7 +67,9 @@
     <footer>
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="path-to-logo.png" alt="Company Logo" />
+          <div class="logo">
+            <img src="images/logo-green.svg" alt="Description of image" />
+          </div>
         </div>
         <div class="footer-links">
           <ul>
