--- a/index.html
+++ b/index.html
@@ -3,95 +3,103 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Consultancy Website</title>
+    <title>Sound Commerce | Full-service Global Payments Consultancy</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <!-- HEADER + NAVIGATION SECTION -->
-    <header>
-      <div class="header-container">
-        <h2 class="colorSecondary interExtraBold trackingTight">
-          Sound Commerce<span class="colorPrimaryAlt">.</span>
-        </h2>
-        <nav class="header-nav">
-          <ul>
-            <li class="interExtraBold"><a href="/home">Home</a></li>
-            <li class="interExtraBold"><a href="/about">About Us</a></li>
-            <li class="interExtraBold"><a href="/services">Services</a></li>
-            <li class="interExtraBold"><a href="/contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+  <body class="animated-gradient">
+    <div class="body-solid-background">
+      <!-- HEADER + NAVIGATION SECTION -->
+      <header>
+        <div class="header-container">
+          <h2 class="colorWhite plus-jakarta-sans-bold trackingTight">
+            <a href="index.html">
+              Sound Commerce<span class="colorPrimaryAlt">.</span></a
+            >
+          </h2>
+          <nav class="header-nav">
+            <ul>
+              <li class="plus-jakarta-sans-normal">
+                <a href="about.html">About</a>
+              </li>
+              <li class="plus-jakarta-sans-normal">
+                <a href="services.html">Services</a>
+              </li>
+              <li class="plus-jakarta-sans-normal">
+                <a href="contact.html">Get in Touch</a>
+              </li>
+              <li class="plus-jakarta-sans-normal">
+                <a href="*">Book a Call</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
 
-    <!-- HERO SECTION -->
-    <section class="hero bgSecondary colorWhite">
-      <h1 class="interExtraBold trackingTight">
-        Sound Commerce<span class="colorPrimaryAlt">.</span> <br />A
-        full-service global <br />payments consultancy<span
-          class="colorPrimaryAlt"
-          >.</span
+      <!-- SERVICE #1 SECTION -->
+      <section class="hero colorPrimary plus-jakarta-sans-light">
+        <h1>
+          A full-service global <br />payments consultancy<span
+            class="colorPrimaryAlt"
+            >.</span
+          >
+        </h1>
+        <h2 class="plus-jakarta-sans-normal">
+          Our global payments consultancy helps businesses optimize
+          transactions, reduce costs, and expand into new markets with expert
+          guidance, advanced analytics, and seamless payment integrations.
+        </h2>
+        <a
+          href="https://calendly.com/your-booking-link"
+          target="_blank"
+          class="book-button"
         >
-      </h1>
-      <div class="logo">
-        <img src="images/logo-green.svg" alt="Description of image" />
-      </div>
-    </section>
+          Learn More
+        </a>
+      </section>
 
-    <!-- SERVICE #1 SECTION -->
-    <section class="hero bgWhite">
-      <div>
-        <h2 class="colorSecondary marginBottom60 interExtraBold trackingTight">
-          Who we are.
-        </h2>
-        <h1>
-          <span class="colorPrimaryAlt">Sound Commerce.</span><br />A
-          full-service global <br />payments consultancy.
-        </h1>
-      </div>
-      <p>icon</p>
-    </section>
+      <section class="colorWhite plus-jakarta-sans-light">
+        <h2 class="plus-jakarta-sans-normal">Sub Title</h2>
+        <p>This is some content</p>
+      </section>
 
-    <!-- SERVICE #1 SECTION -->
-    <section class="hero bgSecondary colorPrimary">
-      <div>
-        <h2 class="marginBottom60 interExtraBold">Who we are.</h2>
-        <h1>
-          Sound Commerce. <br />A full-service global <br />payments
-          consultancy.
-        </h1>
-      </div>
-      <p>icon</p>
-    </section>
-
-    <footer>
-      <div class="footer-container">
-        <div class="footer-logo">
-          <div class="logo">
-            <img src="images/logo-green.svg" alt="Description of image" />
+      <footer class="plus-jakarta-sans-normal">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <div class="logo">
+              <img src="images/logo-green.svg" alt="Description of image" />
+            </div>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+              </li>
+              <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+              <li>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="footer-links">
-          <ul>
-            <li><a href="/about">About Us</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/privacy-policy">Privacy Policy</a></li>
-          </ul>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Sound Commerce. All Rights Reserved.</p>
         </div>
-        <div class="footer-social">
-          <ul>
-            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
-            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-            <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 Sound Commerce. All Rights Reserved.</p>
-      </div>
-    </footer>
+      </footer>
 
-    <script src="script.js"></script>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
