About, Contact, and Services

--- a/about.html
+++ b/about.html
@@ -25,16 +25,21 @@
           <nav class="header-nav">
             <ul>
               <li class="plus-jakarta-sans-normal">
-                <a href="about.html">About</a>
+                <a class="header-nav-link" href="services.html">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="services.html">Services</a>
+                <a class="header-nav-link" href="about.html">About</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="contact.html">Get in Touch</a>
+                <a class="header-nav-link" href="contact.html">Get in Touch</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="*">Book a Call</a>
+                <a
+                  class="book-button-cta"
+                  href="https://calendly.com/sound-commerce/30min"
+                  target="_blank"
+                  >Book a Call</a
+                >
               </li>
             </ul>
           </nav>
@@ -44,13 +49,56 @@
       <!-- PAGE CONTENT -->
       <main class="page-content">
         <section class="hero colorPrimary plus-jakarta-sans-light">
-          <h1>{{PAGE_HEADING}}<span class="colorPrimaryAlt">.</span></h1>
-          <h2 class="plus-jakarta-sans-normal">{{PAGE_DESCRIPTION}}</h2>
-          <a href="{{CTA_LINK}}" target="_blank" class="book-button"
-            >{{CTA_TEXT_}}
-          </a>
+          <h1><br />Who We Are<span class="colorPrimaryAlt">.</span></h1>
+          <h2 class="plus-jakarta-sans-normal">
+            Payment, logistics, and ecommerce optimizations
+          </h2>
+          <div class="value-container">
+            <div class="value-box">
+              <h3>About us</h3>
+              <p class="plus-jakarta-sans-normal">
+                With a decade of experience helping thousands of global
+                businesses ranging from Retailers, SaaS, B2B, and travel expand
+                their operations and grow globally, we have the experience to
+                help you level up your payments game. Our extensive network of
+                vendors and knowledge of pricing will save you on contract and
+                streamline the sales & onboarding processes.
+              </p>
+              <p class="plus-jakarta-sans-normal">
+                We cut through the bullshit and get you a fair price that
+                scales.
+              </p>
+            </div>
+          </div>
         </section>
       </main>
+
+      <footer class="plus-jakarta-sans-normal">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <div class="logo">
+              <img src="images/logo-green.svg" alt="Description of image" />
+            </div>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Sound Commerce. All Rights Reserved.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
