--- a/index.html
+++ b/index.html
@@ -25,16 +25,21 @@
           <nav class="header-nav">
             <ul>
               <li class="plus-jakarta-sans-normal">
-                <a href="about.html">About</a>
+                <a class="header-nav-link" href="services.html">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="services.html">Services</a>
+                <a class="header-nav-link" href="about.html">About</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="contact.html">Get in Touch</a>
+                <a class="header-nav-link" href="contact.html">Get in Touch</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="*">Book a Call</a>
+                <a
+                  class="book-button-cta"
+                  href="https://calendly.com/sound-commerce/30min"
+                  target="_blank"
+                  >Book a Call</a
+                >
               </li>
             </ul>
           </nav>
@@ -55,7 +60,7 @@
           guidance, advanced analytics, and seamless payment integrations.
         </h2>
         <a
-          href="https://calendly.com/your-booking-link"
+          href="https://calendly.com/sound-commerce/30min"
           target="_blank"
           class="book-button"
         >
@@ -63,9 +68,81 @@
         </a>
       </section>
 
-      <section class="colorWhite plus-jakarta-sans-light">
-        <h2 class="plus-jakarta-sans-normal">Sub Title</h2>
-        <p>This is some content</p>
+      <!-- SERVICES SECTION -->
+      <section
+        id="services"
+        class="services-section plus-jakarta-sans-normal colorWhite"
+      >
+        <h2 class="textCenter plus-jakarta-sans-normal">Our Services</h2>
+        <div class="services-grid">
+          <div class="service-card">
+            <h3>Payment Optimization</h3>
+            <p>
+              Reduce fees, increase conversions, and streamline payment flows.
+            </p>
+          </div>
+          <div class="service-card-outline">
+            <div class="service-card">
+              <h3>Fraud Prevention</h3>
+              <p class="plus-jakarta-sans-normal">
+                Protect your transactions with cutting-edge fraud detection
+                tools.
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <h3>Multi-Currency Solutions</h3>
+            <p>
+              Expand globally with seamless multi-currency payment processing.
+            </p>
+          </div>
+          <div class="service-card">
+            <h3>Compliance & Regulations</h3>
+            <p>Ensure your business meets international payment regulations.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- CLIENT LOGOS SECTION -->
+      <!-- <section id="clients" class="client-logos">
+        <h2 class="colorWhite plus-jakarta-sans-normal">Who We Work With</h2>
+        <div class="logos-wrapper">
+          <div class="logo-slide">
+            <img src="images/client1.png" alt="Client 1" />
+            <img src="images/client2.png" alt="Client 2" />
+            <img src="images/client3.png" alt="Client 3" />
+            <img src="images/client4.png" alt="Client 4" />
+            <img src="images/client5.png" alt="Client 5" />
+          </div>
+        </div>
+      </section> -->
+
+      <!-- VALUE PROPOSITION SECTION -->
+      <section
+        id="value"
+        class="value-section plus-jakarta-sans-normal colorWhite"
+      >
+        <h2 class="plus-jakarta-sans-normal">How We Deliver Value</h2>
+        <div class="value-container">
+          <div class="value-box">
+            <h3>Strategic Advisory</h3>
+            <p>
+              We analyze your payment ecosystem and recommend the best
+              solutions.
+            </p>
+          </div>
+          <div class="value-box">
+            <h3>Tech Integration</h3>
+            <p>We ensure seamless payment gateway and API integrations.</p>
+          </div>
+          <div class="value-box">
+            <h3>Ongoing Support</h3>
+            <p>
+              We provide continuous monitoring and optimization for your
+              transactions.
+            </p>
+          </div>
+        </div>
       </section>
 
       <footer class="plus-jakarta-sans-normal">
@@ -84,10 +161,6 @@
           </div>
           <div class="footer-social">
             <ul>
-              <li>
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-              </li>
-              <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
               <li>
                 <a href="https://linkedin.com" target="_blank">LinkedIn</a>
               </li>
