--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
       <!-- HEADER + NAVIGATION SECTION -->
       <header>
         <div class="header-container">
-          <h2 class="colorWhite plus-jakarta-sans-bold trackingTight">
+          <h2 class="plus-jakarta-sans-bold trackingTight">
             <a href="index.html">
               Sound Commerce<span class="colorPrimaryAlt">.</span></a
             >
@@ -25,16 +25,21 @@
           <nav class="header-nav">
             <ul>
               <li class="plus-jakarta-sans-normal">
-                <a href="about.html">About</a>
+                <a class="header-nav-link" href="services.html">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="services.html">Services</a>
+                <a class="header-nav-link" href="about.html">About</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="contact.html">Get in Touch</a>
+                <a class="header-nav-link" href="contact.html">Get in Touch</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="*">Book a Call</a>
+                <a
+                  class="book-button-cta"
+                  href="https://calendly.com/sound-commerce/30min"
+                  target="_blank"
+                  >Book a Call</a
+                >
               </li>
             </ul>
           </nav>
@@ -44,13 +49,83 @@
       <!-- PAGE CONTENT -->
       <main class="page-content">
         <section class="hero colorPrimary plus-jakarta-sans-light">
-          <h1>{{PAGE_HEADING}}<span class="colorPrimaryAlt">.</span></h1>
-          <h2 class="plus-jakarta-sans-normal">{{PAGE_DESCRIPTION}}</h2>
-          <a href="{{CTA_LINK}}" target="_blank" class="book-button"
-            >{{CTA_TEXT_
-          </a>
+          <h1>
+            <br />Commerce Simplified<span class="colorPrimaryAlt">.</span>
+          </h1>
+          <h2 class="plus-jakarta-sans-normal">
+            Optimizing payment operations, entity structuring, and localization
+            strategies to maximize success rates, reduce fees, and streamline
+            global commerce.
+          </h2>
         </section>
+        <div class="services-page-section">
+          <section class="service-page-card plus-jakarta-sans-normal">
+            <div>
+              <h2>Optimize Payment Performance</h2>
+              <p>
+                Monitor and improve authorization rates, chargeback rates, and
+                reserves to ensure seamless scaling without vendor issues.
+              </p>
+            </div>
+            <div><h2>More Content</h2></div>
+          </section>
+          <section class="service-card plus-jakarta-sans-normal">
+            <h2>Strategic Entity Structuring</h2>
+            <p>
+              Increase payment success rates and reduce fees while optimizing
+              tax obligations for sustainable growth.
+            </p>
+          </section>
+          <section class="service-card plus-jakarta-sans-normal">
+            <h2>Checkout & Localization Strategy</h2>
+            <p>
+              Enhance global conversions with tailored payment methods, duties &
+              tax strategies, and optimized shipping solutions.
+            </p>
+          </section>
+          <section class="service-card plus-jakarta-sans-normal">
+            <h2>High-Risk Payment Management</h2>
+            <p>
+              Navigate underwriting challenges, prevent account shutdowns, and
+              secure stable payment processing for high-risk businesses.
+            </p>
+          </section>
+          <section class="service-card plus-jakarta-sans-normal colorWhite">
+            <h2>Vendor & Contract Negotiation</h2>
+            <p>
+              Leverage my industry expertise and network to secure fair pricing
+              and efficient onboarding with top-tier payment providers.
+            </p>
+          </section>
+        </div>
       </main>
+
+      <footer class="plus-jakarta-sans-normal">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <div class="logo">
+              <img src="images/logo-green.svg" alt="Description of image" />
+            </div>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Sound Commerce. All Rights Reserved.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
