--- a/contact.html
+++ b/contact.html
@@ -25,16 +25,21 @@
           <nav class="header-nav">
             <ul>
               <li class="plus-jakarta-sans-normal">
-                <a href="about.html">About</a>
+                <a class="header-nav-link" href="services.html">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="services.html">Services</a>
+                <a class="header-nav-link" href="about.html">About</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="contact.html">Get in Touch</a>
+                <a class="header-nav-link" href="contact.html">Get in Touch</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a href="*">Book a Call</a>
+                <a
+                  class="book-button-cta"
+                  href="https://calendly.com/sound-commerce/30min"
+                  target="_blank"
+                  >Book a Call</a
+                >
               </li>
             </ul>
           </nav>
@@ -44,13 +49,48 @@
       <!-- PAGE CONTENT -->
       <main class="page-content">
         <section class="hero colorPrimary plus-jakarta-sans-light">
-          <h1>{{PAGE_HEADING}}<span class="colorPrimaryAlt">.</span></h1>
-          <h2 class="plus-jakarta-sans-normal">{{PAGE_DESCRIPTION}}</h2>
-          <a href="{{CTA_LINK}}" target="_blank" class="book-button"
-            >{{CTA_TEXT_
-          </a>
+          <h1><br />Get In Touch<span class="colorPrimaryAlt">.</span></h1>
+          <h2 class="plus-jakarta-sans-normal">
+            Looking to optimize your payments strategy? Let us know what you
+            need help with, and we’ll get back to you soon. If you’d rather jump
+            right into a conversation, schedule a discovery call using the link
+            below.
+          </h2>
+          <a
+            class="book-button-cta"
+            href="https://calendly.com/sound-commerce/30min"
+            target="_blank"
+            >Book a Call</a
+          >
         </section>
       </main>
+
+      <footer class="plus-jakarta-sans-normal">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <div class="logo">
+              <img src="images/logo-green.svg" alt="Description of image" />
+            </div>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2025 Sound Commerce. All Rights Reserved.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
