--- a/services.html
+++ b/services.html
@@ -103,9 +103,11 @@
       <footer class="plus-jakarta-sans-normal">
         <div class="footer-container">
           <div class="footer-logo">
-            <div class="logo">
-              <img src="images/logo-green.svg" alt="Description of image" />
-            </div>
+            <h2 class="colorWhite plus-jakarta-sans-bold trackingTight">
+              <a href="index.html">
+                Sound<span class="colorPrimaryAlt">.</span></a
+              >
+            </h2>
           </div>
           <div class="footer-links">
             <ul>
