--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </h2>
           <nav class="header-nav">
             <ul>
-              <li class="plus-jakarta-sans-normal">
+              <!-- <li class="plus-jakarta-sans-normal">
                 <a class="header-nav-link" href="services.html">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
@@ -32,7 +32,7 @@
               </li>
               <li class="plus-jakarta-sans-normal">
                 <a class="header-nav-link" href="contact.html">Get in Touch</a>
-              </li>
+              </li> -->
               <li class="plus-jakarta-sans-normal">
                 <a
                   class="book-button-cta"
