--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
       rel="stylesheet"
     />
   </head>
+
   <body class="animated-gradient">
     <div class="body-solid-background">
       <!-- HEADER + NAVIGATION SECTION -->
       <header>
         <div class="header-container">
           <h2 class="colorWhite plus-jakarta-sans-bold trackingTight">
-            <a href="index.html">
-              Sound Commerce<span class="colorPrimaryAlt">.</span></a
+            <a href="index.html"
+              >Sound<span class="hero-header-space"> Commerce</span
+              ><span class="colorPrimaryAlt">.</span></a
             >
           </h2>
           <nav class="header-nav">
             <ul>
-              <!-- <li class="plus-jakarta-sans-normal">
-                <a class="header-nav-link" href="services.html">Services</a>
+              <li class="plus-jakarta-sans-normal">
+                <a class="header-nav-link" href="#services">Services</a>
               </li>
               <li class="plus-jakarta-sans-normal">
-                <a class="header-nav-link" href="about.html">About</a>
+                <a class="header-nav-link" href="#about">About</a>
               </li>
-              <li class="plus-jakarta-sans-normal">
-                <a class="header-nav-link" href="contact.html">Get in Touch</a>
-              </li> -->
+              <li class="plus-jakarta-sans-normal hero-header-space">
+                <a class="header-nav-link" href="#contact">Get in Touch</a>
+              </li>
               <li class="plus-jakarta-sans-normal">
                 <a
                   class="book-button-cta"
@@ -47,12 +49,10 @@
       </header>
 
       <!-- SERVICE #1 SECTION -->
-      <section class="hero colorPrimary plus-jakarta-sans-light">
+      <section class="hero colorPrimary plus-jakarta-sans-light padding-top-50">
         <h1>
-          A full-service global <br />payments consultancy<span
-            class="colorPrimaryAlt"
-            >.</span
-          >
+          A full-service global <br class="hero-header-space" />payments
+          consultancy<span class="colorPrimaryAlt">.</span>
         </h1>
         <h2 class="plus-jakarta-sans-normal">
           Our global payments consultancy helps businesses optimize
@@ -63,9 +63,8 @@
           href="https://calendly.com/sound-commerce/30min"
           target="_blank"
           class="book-button"
+          >Learn More</a
         >
-          Learn More
-        </a>
       </section>
 
       <!-- SERVICES SECTION -->
@@ -103,23 +102,9 @@
         </div>
       </section>
 
-      <!-- CLIENT LOGOS SECTION -->
-      <!-- <section id="clients" class="client-logos">
-        <h2 class="colorWhite plus-jakarta-sans-normal">Who We Work With</h2>
-        <div class="logos-wrapper">
-          <div class="logo-slide">
-            <img src="images/client1.png" alt="Client 1" />
-            <img src="images/client2.png" alt="Client 2" />
-            <img src="images/client3.png" alt="Client 3" />
-            <img src="images/client4.png" alt="Client 4" />
-            <img src="images/client5.png" alt="Client 5" />
-          </div>
-        </div>
-      </section> -->
-
       <!-- VALUE PROPOSITION SECTION -->
       <section
-        id="value"
+        id="about"
         class="value-section plus-jakarta-sans-normal colorWhite"
       >
         <h2 class="plus-jakarta-sans-normal">How We Deliver Value</h2>
@@ -145,20 +130,40 @@
         </div>
       </section>
 
+      <!-- CONTACT SECTION -->
+      <section
+        id="contact"
+        class="value-section hero colorPrimary plus-jakarta-sans-light"
+      >
+        <h1><br />Get In Touch<span class="colorPrimaryAlt">.</span></h1>
+        <h2 class="plus-jakarta-sans-normal">
+          Looking to optimize your payments strategy? Let us know what you need
+          help with, and we’ll get back to you soon. If you’d rather jump right
+          into a conversation, schedule a discovery call using the link below.
+        </h2>
+        <a
+          class="book-button-cta"
+          href="https://calendly.com/sound-commerce/30min"
+          target="_blank"
+          >Book a Call</a
+        >
+      </section>
+
+      <!-- FOOTER -->
       <footer class="plus-jakarta-sans-normal">
         <div class="footer-container">
           <div class="footer-logo">
             <h2 class="colorWhite plus-jakarta-sans-bold trackingTight">
-              <a href="index.html">
-                Sound<span class="colorPrimaryAlt">.</span></a
+              <a href="index.html"
+                >Sound<span class="colorPrimaryAlt">.</span></a
               >
             </h2>
           </div>
           <div class="footer-links">
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#about">About Us</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
           <div class="footer-social">
