--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
         <h2 class="textCenter plus-jakarta-sans-normal">Our Services</h2>
         <div class="services-grid">
           <div class="service-card">
-            <h3>Payment Optimization</h3>
+            <h3>Streamline Processor Management</h3>
             <p>
               Reduce fees, increase conversions, and streamline payment flows.
             </p>
           </div>
           <div class="service-card-outline">
             <div class="service-card">
-              <h3>Fraud Prevention</h3>
+              <h3>Merchant of Record Selection</h3>
               <p class="plus-jakarta-sans-normal">
-                Protect your transactions with cutting-edge fraud detection
-                tools.
+                Find the right Merchant of Record the first time with expert
+                guidance.
               </p>
             </div>
           </div>
@@ -97,7 +97,10 @@
           </div>
           <div class="service-card">
             <h3>Compliance & Regulations</h3>
-            <p>Ensure your business meets international payment regulations.</p>
+            <p>
+              Ensure your business stays compliant with the latest card brand
+              programs like VAMP.
+            </p>
           </div>
         </div>
       </section>
