--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
             </div>
           </div>
           <div class="service-card">
-            <h3>Multi-Currency Solutions</h3>
+            <h3>High Risk Merchant Accounts</h3>
             <p>
-              Expand globally with seamless multi-currency payment processing.
+              Source, maintain, and optimize high risk merchant accounts so you
+              can focus on scale.
             </p>
           </div>
           <div class="service-card">
